--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
   <div class="centered-main-page-element">
-    <p id="topSectionForAddingElementToList">
+    <p id="top-section-for-addinge-lement-to-list">
       <label for="new-task">Add Item</label>
       <div class="task-row-wrapper">
         <input id="new-task"class="task" type="text">
@@ -29,7 +29,7 @@
           <img src="./remove.svg">
         </button>
       </li>
-      <li class="editMode">
+      <li class="edit-mode">
         <input type="checkbox">
         <label class="task">Go Shopping</label>
         <input type="text" value="Go Shopping" class="task">
