--- a/index.html
+++ b/index.html
@@ -1,57 +1,65 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Todo App</title>
-  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
-</head>
-<body>
-  <div class="aaa">
-    <img src="./eisenhower-matrix.jpg">
-    <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-  </div>
-  <div class="centered-main-page-element">
-    <p id="top-section-for-addinge-lement-to-list">
-      <label for="new-task">Add Item</label>
-      <div class="task-row-wrapper">
-        <input id="new-task"class="task" type="text">
-        <button>Add</button>
-      </div>
-    </p>
-    <h3>Todo</h3>
-    <ul id="incompleteTasks">
-      <li>
-        <input type="checkbox">
-        <label class="task">Pay Bills</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete">
-          <img src="./remove.svg">
-        </button>
-      </li>
-      <li class="edit-mode">
-        <input type="checkbox">
-        <label class="task">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="task">
-        <button class="edit">Save</button>
-        <button class="delete">
-          <img src="./remove.svg">
-        </button>
-      </li>
-    </ul>
-    <h3>Completed</h3>
-    <ul id="completed-tasks">
-      <li>
-        <input type="checkbox" checked>
-        <label class="task">See the Doctor</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete">
-          <img src="./remove.svg">
-        </button>
-    </li>
-    </ul>
-  </div>
-  <script src="app.js"></script>
-</body>
+  <head>
+    <title>Todo App</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato:300,400,700"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link rel="stylesheet" href="style.css" media="screen" charset="utf-8" />
+  </head>
+  <body>
+    <div class="intro">
+      <img src="./eisenhower-matrix.jpg" />
+      <a
+        class="intro__link"
+        href="https://goal-life.com/page/method/matrix-eisenhower"
+        >Want more details?</a
+      >
+    </div>
+    <div class="page-container">
+      <section id="section-add-item">
+        <label class="section-add-item__label" for="new-task">Add Item</label>
+        <div class="section-add-item__inner-container">
+          <input id="new-task" class="task" type="text" />
+          <button>Add</button>
+        </div>
+      </section>
+      <h3>Todo</h3>
+      <ul id="incomplete-tasks">
+        <li>
+          <input type="checkbox" />
+          <label class="task">Pay Bills</label>
+          <input type="text" class="task" />
+          <button class="edit">Edit</button>
+          <button class="delete">
+            <img src="./remove.svg" />
+          </button>
+        </li>
+        <li class="edit-mode">
+          <input type="checkbox" />
+          <label class="task">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="task" />
+          <button class="edit">Save</button>
+          <button class="delete">
+            <img src="./remove.svg" />
+          </button>
+        </li>
+      </ul>
+      <h3>Completed</h3>
+      <ul id="completed-tasks">
+        <li>
+          <input type="checkbox" checked />
+          <label class="task">See the Doctor</label>
+          <input type="text" class="task" />
+          <button class="edit">Edit</button>
+          <button class="delete">
+            <img src="./remove.svg" />
+          </button>
+        </li>
+      </ul>
+    </div>
+    <script src="app.js"></script>
+  </body>
 </html>
