--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         class="intro__link"
         href="https://goal-life.com/page/method/matrix-eisenhower"
         >Want more details?</a
-      >
+      git >
     </div>
     <div class="page-container">
       <section id="section-add-item">
@@ -27,7 +27,7 @@
         </div>
       </section>
       <h3>Todo</h3>
-      <ul id="incomplete-tasks">
+      <ul class="incomplete-tasks-list" id="incomplete-tasks">
         <li>
           <input type="checkbox" />
           <label class="task">Pay Bills</label>
