--- a/index.html
+++ b/index.html
@@ -26,39 +26,43 @@
           <button>Add</button>
         </div>
       </section>
-      <h3>Todo</h3>
-      <ul class="incomplete-tasks-list" id="incomplete-tasks">
-        <li>
-          <input type="checkbox" />
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task" />
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg" />
-          </button>
-        </li>
-        <li class="edit-mode">
-          <input type="checkbox" />
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task" />
-          <button class="edit">Save</button>
-          <button class="delete">
-            <img src="./remove.svg" />
-          </button>
-        </li>
-      </ul>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked />
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task" />
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg" />
-          </button>
-        </li>
-      </ul>
+      <section class="section-incomplete-tasks">
+        <h3 class="section-incomplete-tasks__title">Todo</h3>
+        <ul class="section-incomplete-tasks__list" id="incomplete-tasks">
+          <li class="section-incomplete-tasks__item">
+            <input type="checkbox" />
+            <label class="task">Pay Bills</label>
+            <input type="text" class="task" />
+            <button class="edit">Edit</button>
+            <button class="delete">
+              <img src="./remove.svg" />
+            </button>
+          </li>
+          <li class="section-incomplete-tasks__item edit-mode">
+            <input type="checkbox" />
+            <label class="task">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="task" />
+            <button class="edit">Save</button>
+            <button class="delete">
+              <img src="./remove.svg" />
+            </button>
+          </li>
+        </ul>
+      </section>
+      <section class="section-completed-tasks">
+        <h3 class="section-completed-tasks__title">Completed</h3>
+        <ul class="section-completed-tasks__list" id="completed-tasks">
+          <li class="section-completed-tasks__item">
+            <input type="checkbox" checked />
+            <label class="task">See the Doctor</label>
+            <input type="text" class="task" />
+            <button class="edit">Edit</button>
+            <button class="delete">
+              <img src="./remove.svg" />
+            </button>
+          </li>
+        </ul>
+      </section>
     </div>
     <script src="app.js"></script>
   </body>
