--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8" />
   </head>
   <body class="body">
-    <div class="intro">
+    <section class="intro">
       <img src="./eisenhower-matrix.jpg" />
       <a
         class="intro__link"
         href="https://goal-life.com/page/method/matrix-eisenhower"
         >Want more details?</a
       git >
-    </div>
+    </section>
     <div class="page-container">
       <section id="section-add-item">
         <label class="section-add-item__label" for="new-task">Add Item</label>
