--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body class="body">
     <section class="intro">
-      <img src="./eisenhower-matrix.jpg" />
+      <img src="./eisenhower-matrix.jpg" alt="Матрица эйзенховер"/>
       <a
         class="intro__link"
         href="https://goal-life.com/page/method/matrix-eisenhower"
@@ -35,7 +35,7 @@
             <input type="text" class="task" />
             <button class="edit">Edit</button>
             <button class="delete">
-              <img src="./remove.svg" />
+              <img src="./remove.svg" alt=""/>
             </button>
           </li>
           <li class="section-incomplete-tasks__item edit-mode">
@@ -44,7 +44,7 @@
             <input type="text" value="Go Shopping" class="task" />
             <button class="edit">Save</button>
             <button class="delete">
-              <img src="./remove.svg" />
+              <img src="./remove.svg" alt=""/>
             </button>
           </li>
         </ul>
@@ -58,7 +58,7 @@
             <input type="text" class="task" />
             <button class="edit">Edit</button>
             <button class="delete">
-              <img src="./remove.svg" />
+              <img src="./remove.svg" alt=""/>
             </button>
           </li>
         </ul>
