reafctor:  html and css  accrording rule html-css-extented 2.1

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body class="body">
     <section class="intro">
-      <img src="./eisenhower-matrix.jpg" alt="Матрица эйзенховер"/>
+      <img class="intro__image" src="./eisenhower-matrix.jpg" alt="Матрица эйзенховер"/>
       <a
         class="intro__link"
         href="https://goal-life.com/page/method/matrix-eisenhower"
